etapa2/parser.output
Terminals unused in grammar

    TK_PR_INPUT
    TK_PR_OUTPUT
    TK_PR_FOR
    TK_LIT_CHAR
    TK_ERRO


Rules useless in parser due to conflicts

   40 prec_one: '!' prec_one
   41         | '-' prec_one

   46 expressoes: expressoes '^' expressao
   47           | expressao

   48 argumentos: argumentos ',' expressao
   49           | expressao

   52 operando: TK_IDENTIFICADOR '[' expressoes ']'

   73 retorno: TK_PR_RETURN expressao

   74 atribuicao: TK_IDENTIFICADOR indice '=' expressao


State 30 conflicts: 1 shift/reduce, 2 reduce/reduce
State 31 conflicts: 1 shift/reduce
State 32 conflicts: 2 shift/reduce
State 33 conflicts: 4 shift/reduce
State 34 conflicts: 2 shift/reduce
State 35 conflicts: 3 shift/reduce
State 48 conflicts: 1 shift/reduce
State 49 conflicts: 19 reduce/reduce
State 50 conflicts: 19 reduce/reduce
State 51 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce, 2 reduce/reduce
State 73 conflicts: 1 shift/reduce, 19 reduce/reduce
State 74 conflicts: 2 shift/reduce, 19 reduce/reduce
State 75 conflicts: 4 shift/reduce, 19 reduce/reduce
State 76 conflicts: 4 shift/reduce, 19 reduce/reduce
State 77 conflicts: 2 shift/reduce, 19 reduce/reduce
State 78 conflicts: 2 shift/reduce, 19 reduce/reduce
State 79 conflicts: 2 shift/reduce, 19 reduce/reduce
State 80 conflicts: 2 shift/reduce, 19 reduce/reduce
State 81 conflicts: 3 shift/reduce, 19 reduce/reduce
State 82 conflicts: 3 shift/reduce, 19 reduce/reduce
State 83 conflicts: 19 reduce/reduce
State 84 conflicts: 19 reduce/reduce
State 85 conflicts: 19 reduce/reduce
State 86 conflicts: 1 shift/reduce, 2 reduce/reduce
State 89 conflicts: 19 reduce/reduce
State 106 conflicts: 1 shift/reduce, 2 reduce/reduce
State 109 conflicts: 1 shift/reduce, 2 reduce/reduce
State 116 conflicts: 2 shift/reduce
State 117 conflicts: 2 shift/reduce
State 127 conflicts: 1 shift/reduce, 2 reduce/reduce


Grammar

    0 $accept: programa $end

    1 programa: ε
    2         | lista

    3 lista: funcao
    4      | declaracao_global
    5      | lista funcao
    6      | lista declaracao_global

    7 declaracao_global: tipo lista_nomes_global ';'

    8 init_variavel_local: '<' '=' TK_LIT_INT
    9                    | ε

   10 declaracao_local: tipo lista_nomes_local ';'

   11 lista_nomes_local: lista_nomes_local ',' TK_IDENTIFICADOR arranjo init_variavel_local
   12                  | TK_IDENTIFICADOR arranjo init_variavel_local

   13 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR arranjo
   14                   | TK_IDENTIFICADOR arranjo ';'

   15 arranjo: '[' lista_inteiros ']'
   16        | ε

   17 lista_inteiros: lista_inteiros '^' TK_LIT_INT
   18               | TK_LIT_INT

   19 indice: '[' expressoes ']'
   20       | ε

   21 expressao: expressao TK_OC_OR prec_six
   22          | prec_six

   23 prec_six: prec_six TK_OC_AND prec_five
   24         | prec_five

   25 prec_five: prec_five TK_OC_EQ prec_four
   26          | prec_five TK_OC_NE prec_four
   27          | prec_four

   28 prec_four: prec_four '>' prec_three
   29          | prec_four '<' prec_three
   30          | prec_four TK_OC_LE prec_three
   31          | prec_four TK_OC_GE prec_three
   32          | prec_three

   33 prec_three: prec_three '+' prec_two
   34           | prec_three '-' prec_two
   35           | prec_two

   36 prec_two: prec_two '*' prec_one
   37         | prec_two '/' prec_one
   38         | prec_two '%' prec_one
   39         | prec_one

   40 prec_one: '!' prec_one
   41         | '-' prec_one
   42         | operando
   43         | prec_zero

   44 prec_zero: '(' prec_zero ')'
   45          | expressao

   46 expressoes: expressoes '^' expressao
   47           | expressao

   48 argumentos: argumentos ',' expressao
   49           | expressao

   50 chamada_funcao: TK_IDENTIFICADOR '(' argumentos ')'

   51 operando: TK_IDENTIFICADOR indice
   52         | TK_IDENTIFICADOR '[' expressoes ']'
   53         | TK_LIT_INT
   54         | TK_LIT_FLOAT
   55         | TK_LIT_FALSE
   56         | TK_LIT_TRUE
   57         | chamada_funcao

   58 tipo: TK_PR_INT
   59     | TK_PR_FLOAT
   60     | TK_PR_BOOL
   61     | TK_PR_CHAR

   62 funcao: tipo TK_IDENTIFICADOR '(' argumentos ')' bloco

   63 bloco: '{' comandos_simples '}'

   64 comandos_simples: comandos_simples ';' comando_simples
   65                 | comando_simples

   66 comando_simples: declaracao_local
   67                | bloco
   68                | chamada_funcao
   69                | atribuicao
   70                | retorno
   71                | if
   72                | while

   73 retorno: TK_PR_RETURN expressao

   74 atribuicao: TK_IDENTIFICADOR indice '=' expressao

   75 if: TK_PR_IF '(' expressao ')' TK_PR_THEN bloco else

   76 else: TK_PR_ELSE bloco
   77     | ε

   78 while: TK_PR_WHILE '(' expressao ')' bloco


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 40
    '%' (37) 38
    '(' (40) 44 50 62 75 78
    ')' (41) 44 50 62 75 78
    '*' (42) 36
    '+' (43) 33
    ',' (44) 11 13 48
    '-' (45) 34 41
    '/' (47) 37
    ';' (59) 7 10 14 64
    '<' (60) 8 29
    '=' (61) 8 74
    '>' (62) 28
    '[' (91) 15 19 52
    ']' (93) 15 19 52
    '^' (94) 17 46
    '{' (123) 63
    '}' (125) 63
    error (256)
    TK_PR_INT (258) 58
    TK_PR_FLOAT (259) 59
    TK_PR_BOOL (260) 60
    TK_PR_CHAR (261) 61
    TK_PR_IF (262) 75
    TK_PR_THEN (263) 75
    TK_PR_ELSE (264) 76
    TK_PR_WHILE (265) 78
    TK_PR_INPUT (266)
    TK_PR_OUTPUT (267)
    TK_PR_RETURN (268) 73
    TK_PR_FOR (269)
    TK_OC_LE (270) 30
    TK_OC_GE (271) 31
    TK_OC_EQ (272) 25
    TK_OC_NE (273) 26
    TK_OC_AND (274) 23
    TK_OC_OR (275) 21
    TK_LIT_INT (276) 8 17 18 53
    TK_LIT_FLOAT (277) 54
    TK_LIT_FALSE (278) 55
    TK_LIT_TRUE (279) 56
    TK_LIT_CHAR (280)
    TK_IDENTIFICADOR (281) 11 12 13 14 50 51 52 62 74
    TK_ERRO (282)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    programa (47)
        on left: 1 2
        on right: 0
    lista (48)
        on left: 3 4 5 6
        on right: 2 5 6
    declaracao_global (49)
        on left: 7
        on right: 4 6
    init_variavel_local (50)
        on left: 8 9
        on right: 11 12
    declaracao_local (51)
        on left: 10
        on right: 66
    lista_nomes_local (52)
        on left: 11 12
        on right: 10 11
    lista_nomes_global (53)
        on left: 13 14
        on right: 7 13
    arranjo (54)
        on left: 15 16
        on right: 11 12 13 14
    lista_inteiros (55)
        on left: 17 18
        on right: 15 17
    indice (56)
        on left: 19 20
        on right: 51 74
    expressao (57)
        on left: 21 22
        on right: 21 45 46 47 48 49 73 74 75 78
    prec_six (58)
        on left: 23 24
        on right: 21 22 23
    prec_five (59)
        on left: 25 26 27
        on right: 23 24 25 26
    prec_four (60)
        on left: 28 29 30 31 32
        on right: 25 26 27 28 29 30 31
    prec_three (61)
        on left: 33 34 35
        on right: 28 29 30 31 32 33 34
    prec_two (62)
        on left: 36 37 38 39
        on right: 33 34 35 36 37 38
    prec_one (63)
        on left: 40 41 42 43
        on right: 36 37 38 39 40 41
    prec_zero (64)
        on left: 44 45
        on right: 43 44
    expressoes (65)
        on left: 46 47
        on right: 19 46 52
    argumentos (66)
        on left: 48 49
        on right: 48 50 62
    chamada_funcao (67)
        on left: 50
        on right: 57 68
    operando (68)
        on left: 51 52 53 54 55 56 57
        on right: 42
    tipo (69)
        on left: 58 59 60 61
        on right: 7 10 62
    funcao (70)
        on left: 62
        on right: 3 5
    bloco (71)
        on left: 63
        on right: 62 67 75 76 78
    comandos_simples (72)
        on left: 64 65
        on right: 63 64
    comando_simples (73)
        on left: 66 67 68 69 70 71 72
        on right: 64 65
    retorno (74)
        on left: 73
        on right: 70
    atribuicao (75)
        on left: 74
        on right: 69
    if (76)
        on left: 75
        on right: 71
    else (77)
        on left: 76 77
        on right: 75
    while (78)
        on left: 78
        on right: 72


State 0

    0 $accept: • programa $end

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 1 (programa)

    programa           go to state 5
    lista              go to state 6
    declaracao_global  go to state 7
    tipo               go to state 8
    funcao             go to state 9


State 1

   58 tipo: TK_PR_INT •

    $default  reduce using rule 58 (tipo)


State 2

   59 tipo: TK_PR_FLOAT •

    $default  reduce using rule 59 (tipo)


State 3

   60 tipo: TK_PR_BOOL •

    $default  reduce using rule 60 (tipo)


State 4

   61 tipo: TK_PR_CHAR •

    $default  reduce using rule 61 (tipo)


State 5

    0 $accept: programa • $end

    $end  shift, and go to state 10


State 6

    2 programa: lista •
    5 lista: lista • funcao
    6      | lista • declaracao_global

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 2 (programa)

    declaracao_global  go to state 11
    tipo               go to state 8
    funcao             go to state 12


State 7

    4 lista: declaracao_global •

    $default  reduce using rule 4 (lista)


State 8

    7 declaracao_global: tipo • lista_nomes_global ';'
   62 funcao: tipo • TK_IDENTIFICADOR '(' argumentos ')' bloco

    TK_IDENTIFICADOR  shift, and go to state 13

    lista_nomes_global  go to state 14


State 9

    3 lista: funcao •

    $default  reduce using rule 3 (lista)


State 10

    0 $accept: programa $end •

    $default  accept


State 11

    6 lista: lista declaracao_global •

    $default  reduce using rule 6 (lista)


State 12

    5 lista: lista funcao •

    $default  reduce using rule 5 (lista)


State 13

   14 lista_nomes_global: TK_IDENTIFICADOR • arranjo ';'
   62 funcao: tipo TK_IDENTIFICADOR • '(' argumentos ')' bloco

    '['  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 16 (arranjo)

    arranjo  go to state 17


State 14

    7 declaracao_global: tipo lista_nomes_global • ';'
   13 lista_nomes_global: lista_nomes_global • ',' TK_IDENTIFICADOR arranjo

    ';'  shift, and go to state 18
    ','  shift, and go to state 19


State 15

   15 arranjo: '[' • lista_inteiros ']'

    TK_LIT_INT  shift, and go to state 20

    lista_inteiros  go to state 21


State 16

   62 funcao: tipo TK_IDENTIFICADOR '(' • argumentos ')' bloco

    TK_LIT_INT        shift, and go to state 22
    TK_LIT_FLOAT      shift, and go to state 23
    TK_LIT_FALSE      shift, and go to state 24
    TK_LIT_TRUE       shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 26
    '-'               shift, and go to state 27
    '!'               shift, and go to state 28
    '('               shift, and go to state 29

    expressao       go to state 30
    prec_six        go to state 31
    prec_five       go to state 32
    prec_four       go to state 33
    prec_three      go to state 34
    prec_two        go to state 35
    prec_one        go to state 36
    prec_zero       go to state 37
    argumentos      go to state 38
    chamada_funcao  go to state 39
    operando        go to state 40


State 17

   14 lista_nomes_global: TK_IDENTIFICADOR arranjo • ';'

    ';'  shift, and go to state 41


State 18

    7 declaracao_global: tipo lista_nomes_global ';' •

    $default  reduce using rule 7 (declaracao_global)


State 19

   13 lista_nomes_global: lista_nomes_global ',' • TK_IDENTIFICADOR arranjo

    TK_IDENTIFICADOR  shift, and go to state 42


State 20

   18 lista_inteiros: TK_LIT_INT •

    $default  reduce using rule 18 (lista_inteiros)


State 21

   15 arranjo: '[' lista_inteiros • ']'
   17 lista_inteiros: lista_inteiros • '^' TK_LIT_INT

    ']'  shift, and go to state 43
    '^'  shift, and go to state 44


State 22

   53 operando: TK_LIT_INT •

    $default  reduce using rule 53 (operando)


State 23

   54 operando: TK_LIT_FLOAT •

    $default  reduce using rule 54 (operando)


State 24

   55 operando: TK_LIT_FALSE •

    $default  reduce using rule 55 (operando)


State 25

   56 operando: TK_LIT_TRUE •

    $default  reduce using rule 56 (operando)


State 26

   50 chamada_funcao: TK_IDENTIFICADOR • '(' argumentos ')'
   51 operando: TK_IDENTIFICADOR • indice
   52         | TK_IDENTIFICADOR • '[' expressoes ']'

    '['  shift, and go to state 45
    '('  shift, and go to state 46

    $default  reduce using rule 20 (indice)

    indice  go to state 47


State 27

   41 prec_one: '-' • prec_one

    TK_LIT_INT        shift, and go to state 22
    TK_LIT_FLOAT      shift, and go to state 23
    TK_LIT_FALSE      shift, and go to state 24
    TK_LIT_TRUE       shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 26
    '-'               shift, and go to state 27
    '!'               shift, and go to state 28
    '('               shift, and go to state 29

    expressao       go to state 48
    prec_six        go to state 31
    prec_five       go to state 32
    prec_four       go to state 33
    prec_three      go to state 34
    prec_two        go to state 35
    prec_one        go to state 49
    prec_zero       go to state 37
    chamada_funcao  go to state 39
    operando        go to state 40


State 28

   40 prec_one: '!' • prec_one

    TK_LIT_INT        shift, and go to state 22
    TK_LIT_FLOAT      shift, and go to state 23
    TK_LIT_FALSE      shift, and go to state 24
    TK_LIT_TRUE       shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 26
    '-'               shift, and go to state 27
    '!'               shift, and go to state 28
    '('               shift, and go to state 29

    expressao       go to state 48
    prec_six        go to state 31
    prec_five       go to state 32
    prec_four       go to state 33
    prec_three      go to state 34
    prec_two        go to state 35
    prec_one        go to state 50
    prec_zero       go to state 37
    chamada_funcao  go to state 39
    operando        go to state 40


State 29

   44 prec_zero: '(' • prec_zero ')'

    TK_LIT_INT        shift, and go to state 22
    TK_LIT_FLOAT      shift, and go to state 23
    TK_LIT_FALSE      shift, and go to state 24
    TK_LIT_TRUE       shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 26
    '-'               shift, and go to state 27
    '!'               shift, and go to state 28
    '('               shift, and go to state 29

    expressao       go to state 48
    prec_six        go to state 31
    prec_five       go to state 32
    prec_four       go to state 33
    prec_three      go to state 34
    prec_two        go to state 35
    prec_one        go to state 36
    prec_zero       go to state 51
    chamada_funcao  go to state 39
    operando        go to state 40


State 30

   21 expressao: expressao • TK_OC_OR prec_six
   45 prec_zero: expressao •
   49 argumentos: expressao •

    TK_OC_OR  shift, and go to state 52

    TK_OC_OR  [reduce using rule 45 (prec_zero)]
    ','       reduce using rule 45 (prec_zero)
    ','       [reduce using rule 49 (argumentos)]
    ')'       reduce using rule 45 (prec_zero)
    ')'       [reduce using rule 49 (argumentos)]
    $default  reduce using rule 45 (prec_zero)

    shift/reduce conflict on token TK_OC_OR:
       45 prec_zero: expressao •
       21 expressao: expressao • TK_OC_OR prec_six
      Example: expressao • TK_OC_OR prec_six
      Shift derivation
        expressao
        ↳ 21: expressao • TK_OC_OR prec_six
      Reduce derivation
        expressao
        ↳ 21: expressao                                                   TK_OC_OR prec_six
              ↳ 22: prec_six
                    ↳ 24: prec_five
                          ↳ 27: prec_four
                                ↳ 32: prec_three
                                      ↳ 35: prec_two
                                            ↳ 39: prec_one
                                                  ↳ 43: prec_zero
                                                        ↳ 45: expressao •

    reduce/reduce conflict on tokens ',', ')':
       45 prec_zero: expressao •
       49 argumentos: expressao •
      Example: expressao •
      First reduce derivation
        argumentos
        ↳ 49: expressao
              ↳ 22: prec_six
                    ↳ 24: prec_five
                          ↳ 27: prec_four
                                ↳ 32: prec_three
                                      ↳ 35: prec_two
                                            ↳ 39: prec_one
                                                  ↳ 43: prec_zero
                                                        ↳ 45: expressao •
      Second reduce derivation
        argumentos
        ↳ 49: expressao •



State 31

   22 expressao: prec_six •
   23 prec_six: prec_six • TK_OC_AND prec_five

    TK_OC_AND  shift, and go to state 53

    TK_OC_AND  [reduce using rule 22 (expressao)]
    $default   reduce using rule 22 (expressao)

    shift/reduce conflict on token TK_OC_AND:
       22 expressao: prec_six •
       23 prec_six: prec_six • TK_OC_AND prec_five
      Example: prec_six • TK_OC_AND prec_five
      Shift derivation
        prec_six
        ↳ 23: prec_six • TK_OC_AND prec_five
      Reduce derivation
        prec_six
        ↳ 23: prec_six                                                   TK_OC_AND prec_five
              ↳ 24: prec_five
                    ↳ 27: prec_four
                          ↳ 32: prec_three
                                ↳ 35: prec_two
                                      ↳ 39: prec_one
                                            ↳ 43: prec_zero
                                                  ↳ 45: expressao
                                                        ↳ 22: prec_six •



State 32

   24 prec_six: prec_five •
   25 prec_five: prec_five • TK_OC_EQ prec_four
   26          | prec_five • TK_OC_NE prec_four

    TK_OC_EQ  shift, and go to state 54
    TK_OC_NE  shift, and go to state 55

    TK_OC_EQ  [reduce using rule 24 (prec_six)]
    TK_OC_NE  [reduce using rule 24 (prec_six)]
    $default  reduce using rule 24 (prec_six)

    shift/reduce conflict on token TK_OC_EQ:
       24 prec_six: prec_five •
       25 prec_five: prec_five • TK_OC_EQ prec_four
      Example: prec_five • TK_OC_EQ prec_four
      Shift derivation
        prec_five
        ↳ 25: prec_five • TK_OC_EQ prec_four
      Reduce derivation
        prec_five
        ↳ 25: prec_five                                                   TK_OC_EQ prec_four
              ↳ 27: prec_four
                    ↳ 32: prec_three
                          ↳ 35: prec_two
                                ↳ 39: prec_one
                                      ↳ 43: prec_zero
                                            ↳ 45: expressao
                                                  ↳ 22: prec_six
                                                        ↳ 24: prec_five •

    shift/reduce conflict on token TK_OC_NE:
       24 prec_six: prec_five •
       26 prec_five: prec_five • TK_OC_NE prec_four
      Example: prec_five • TK_OC_NE prec_four
      Shift derivation
        prec_five
        ↳ 26: prec_five • TK_OC_NE prec_four
      Reduce derivation
        prec_five
        ↳ 26: prec_five                                                   TK_OC_NE prec_four
              ↳ 27: prec_four
                    ↳ 32: prec_three
                          ↳ 35: prec_two
                                ↳ 39: prec_one
                                      ↳ 43: prec_zero
                                            ↳ 45: expressao
                                                  ↳ 22: prec_six
                                                        ↳ 24: prec_five •



State 33

   27 prec_five: prec_four •
   28 prec_four: prec_four • '>' prec_three
   29          | prec_four • '<' prec_three
   30          | prec_four • TK_OC_LE prec_three
   31          | prec_four • TK_OC_GE prec_three

    TK_OC_LE  shift, and go to state 56
    TK_OC_GE  shift, and go to state 57
    '<'       shift, and go to state 58
    '>'       shift, and go to state 59

    TK_OC_LE  [reduce using rule 27 (prec_five)]
    TK_OC_GE  [reduce using rule 27 (prec_five)]
    '<'       [reduce using rule 27 (prec_five)]
    '>'       [reduce using rule 27 (prec_five)]
    $default  reduce using rule 27 (prec_five)

    shift/reduce conflict on token '>':
       27 prec_five: prec_four •
       28 prec_four: prec_four • '>' prec_three
      Example: prec_four • '>' prec_three
      Shift derivation
        prec_four
        ↳ 28: prec_four • '>' prec_three
      Reduce derivation
        prec_four
        ↳ 28: prec_four                                                   '>' prec_three
              ↳ 32: prec_three
                    ↳ 35: prec_two
                          ↳ 39: prec_one
                                ↳ 43: prec_zero
                                      ↳ 45: expressao
                                            ↳ 22: prec_six
                                                  ↳ 24: prec_five
                                                        ↳ 27: prec_four •

    shift/reduce conflict on token '<':
       27 prec_five: prec_four •
       29 prec_four: prec_four • '<' prec_three
      Example: prec_four • '<' prec_three
      Shift derivation
        prec_four
        ↳ 29: prec_four • '<' prec_three
      Reduce derivation
        prec_four
        ↳ 29: prec_four                                                   '<' prec_three
              ↳ 32: prec_three
                    ↳ 35: prec_two
                          ↳ 39: prec_one
                                ↳ 43: prec_zero
                                      ↳ 45: expressao
                                            ↳ 22: prec_six
                                                  ↳ 24: prec_five
                                                        ↳ 27: prec_four •

    shift/reduce conflict on token TK_OC_LE:
       27 prec_five: prec_four •
       30 prec_four: prec_four • TK_OC_LE prec_three
      Example: prec_four • TK_OC_LE prec_three
      Shift derivation
        prec_four
        ↳ 30: prec_four • TK_OC_LE prec_three
      Reduce derivation
        prec_four
        ↳ 30: prec_four                                                   TK_OC_LE prec_three
              ↳ 32: prec_three
                    ↳ 35: prec_two
                          ↳ 39: prec_one
                                ↳ 43: prec_zero
                                      ↳ 45: expressao
                                            ↳ 22: prec_six
                                                  ↳ 24: prec_five
                                                        ↳ 27: prec_four •

    shift/reduce conflict on token TK_OC_GE:
       27 prec_five: prec_four •
       31 prec_four: prec_four • TK_OC_GE prec_three
      Example: prec_four • TK_OC_GE prec_three
      Shift derivation
        prec_four
        ↳ 31: prec_four • TK_OC_GE prec_three
      Reduce derivation
        prec_four
        ↳ 31: prec_four                                                   TK_OC_GE prec_three
              ↳ 32: prec_three
                    ↳ 35: prec_two
                          ↳ 39: prec_one
                                ↳ 43: prec_zero
                                      ↳ 45: expressao
                                            ↳ 22: prec_six
                                                  ↳ 24: prec_five
                                                        ↳ 27: prec_four •



State 34

   32 prec_four: prec_three •
   33 prec_three: prec_three • '+' prec_two
   34           | prec_three • '-' prec_two

    '+'  shift, and go to state 60
    '-'  shift, and go to state 61

    '+'       [reduce using rule 32 (prec_four)]
    '-'       [reduce using rule 32 (prec_four)]
    $default  reduce using rule 32 (prec_four)

    shift/reduce conflict on token '+':
       32 prec_four: prec_three •
       33 prec_three: prec_three • '+' prec_two
      Example: prec_three • '+' prec_two
      Shift derivation
        prec_three
        ↳ 33: prec_three • '+' prec_two
      Reduce derivation
        prec_three
        ↳ 33: prec_three                                                   '+' prec_two
              ↳ 35: prec_two
                    ↳ 39: prec_one
                          ↳ 43: prec_zero
                                ↳ 45: expressao
                                      ↳ 22: prec_six
                                            ↳ 24: prec_five
                                                  ↳ 27: prec_four
                                                        ↳ 32: prec_three •

    shift/reduce conflict on token '-':
       32 prec_four: prec_three •
       34 prec_three: prec_three • '-' prec_two
      Example: prec_three • '-' prec_two
      Shift derivation
        prec_three
        ↳ 34: prec_three • '-' prec_two
      Reduce derivation
        prec_three
        ↳ 34: prec_three                                                   '-' prec_two
              ↳ 35: prec_two
                    ↳ 39: prec_one
                          ↳ 43: prec_zero
                                ↳ 45: expressao
                                      ↳ 22: prec_six
                                            ↳ 24: prec_five
                                                  ↳ 27: prec_four
                                                        ↳ 32: prec_three •



State 35

   35 prec_three: prec_two •
   36 prec_two: prec_two • '*' prec_one
   37         | prec_two • '/' prec_one
   38         | prec_two • '%' prec_one

    '*'  shift, and go to state 62
    '/'  shift, and go to state 63
    '%'  shift, and go to state 64

    '*'       [reduce using rule 35 (prec_three)]
    '/'       [reduce using rule 35 (prec_three)]
    '%'       [reduce using rule 35 (prec_three)]
    $default  reduce using rule 35 (prec_three)

    shift/reduce conflict on token '*':
       35 prec_three: prec_two •
       36 prec_two: prec_two • '*' prec_one
      Example: prec_two • '*' prec_one
      Shift derivation
        prec_two
        ↳ 36: prec_two • '*' prec_one
      Reduce derivation
        prec_two
        ↳ 36: prec_two                                                   '*' prec_one
              ↳ 39: prec_one
                    ↳ 43: prec_zero
                          ↳ 45: expressao
                                ↳ 22: prec_six
                                      ↳ 24: prec_five
                                            ↳ 27: prec_four
                                                  ↳ 32: prec_three
                                                        ↳ 35: prec_two •

    shift/reduce conflict on token '/':
       35 prec_three: prec_two •
       37 prec_two: prec_two • '/' prec_one
      Example: prec_two • '/' prec_one
      Shift derivation
        prec_two
        ↳ 37: prec_two • '/' prec_one
      Reduce derivation
        prec_two
        ↳ 37: prec_two                                                   '/' prec_one
              ↳ 39: prec_one
                    ↳ 43: prec_zero
                          ↳ 45: expressao
                                ↳ 22: prec_six
                                      ↳ 24: prec_five
                                            ↳ 27: prec_four
                                                  ↳ 32: prec_three
                                                        ↳ 35: prec_two •

    shift/reduce conflict on token '%':
       35 prec_three: prec_two •
       38 prec_two: prec_two • '%' prec_one
      Example: prec_two • '%' prec_one
      Shift derivation
        prec_two
        ↳ 38: prec_two • '%' prec_one
      Reduce derivation
        prec_two
        ↳ 38: prec_two                                                   '%' prec_one
              ↳ 39: prec_one
                    ↳ 43: prec_zero
                          ↳ 45: expressao
                                ↳ 22: prec_six
                                      ↳ 24: prec_five
                                            ↳ 27: prec_four
                                                  ↳ 32: prec_three
                                                        ↳ 35: prec_two •



State 36

   39 prec_two: prec_one •

    $default  reduce using rule 39 (prec_two)


State 37

   43 prec_one: prec_zero •

    $default  reduce using rule 43 (prec_one)


State 38

   48 argumentos: argumentos • ',' expressao
   62 funcao: tipo TK_IDENTIFICADOR '(' argumentos • ')' bloco

    ','  shift, and go to state 65
    ')'  shift, and go to state 66


State 39

   57 operando: chamada_funcao •

    $default  reduce using rule 57 (operando)


State 40

   42 prec_one: operando •

    $default  reduce using rule 42 (prec_one)


State 41

   14 lista_nomes_global: TK_IDENTIFICADOR arranjo ';' •

    $default  reduce using rule 14 (lista_nomes_global)


State 42

   13 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR • arranjo

    '['  shift, and go to state 15

    $default  reduce using rule 16 (arranjo)

    arranjo  go to state 67


State 43

   15 arranjo: '[' lista_inteiros ']' •

    $default  reduce using rule 15 (arranjo)


State 44

   17 lista_inteiros: lista_inteiros '^' • TK_LIT_INT

    TK_LIT_INT  shift, and go to state 68


State 45

   19 indice: '[' • expressoes ']'
   52 operando: TK_IDENTIFICADOR '[' • expressoes ']'

    TK_LIT_INT        shift, and go to state 22
    TK_LIT_FLOAT      shift, and go to state 23
    TK_LIT_FALSE      shift, and go to state 24
    TK_LIT_TRUE       shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 26
    '-'               shift, and go to state 27
    '!'               shift, and go to state 28
    '('               shift, and go to state 29

    expressao       go to state 69
    prec_six        go to state 31
    prec_five       go to state 32
    prec_four       go to state 33
    prec_three      go to state 34
    prec_two        go to state 35
    prec_one        go to state 36
    prec_zero       go to state 37
    expressoes      go to state 70
    chamada_funcao  go to state 39
    operando        go to state 40


State 46

   50 chamada_funcao: TK_IDENTIFICADOR '(' • argumentos ')'

    TK_LIT_INT        shift, and go to state 22
    TK_LIT_FLOAT      shift, and go to state 23
    TK_LIT_FALSE      shift, and go to state 24
    TK_LIT_TRUE       shift, and go to state 25
    TK_IDENTIFICADOR  shift, and go to state 26
    '-'               shift, and go to state 27
    '!'               shift, and go to state 28
    '('               shift, and go to state 29

    expressao       go to state 30
    prec_six        go to state 31
    prec_five       go to state 32
    prec_four       go to state 33
    prec_three      go to state 34
    prec_two        go to state 35
    prec_one        go to state 36
    prec_zero       go to state 37
    argumentos      go to state 71
    chamada_funcao  go to state 39
    operando        go to state 40


State 47

   51 operando: TK_IDENTIFICADOR indice •

    $default  reduce using rule 51 (operando)


State 48

   21 expressao: expressao • TK_OC_OR prec_six
   45 prec_zero: expressao •

    TK_OC_OR  shift, and go to state 52

    TK_OC_OR  [reduce using rule 45 (prec_zero)]
    $default  reduce using rule 45 (prec_zero)

    shift/reduce conflict on token TK_OC_OR:
       45 prec_zero: expressao •
       21 expressao: expressao • TK_OC_OR prec_six
      Example: expressao • TK_OC_OR prec_six
      Shift derivation
        expressao
        ↳ 21: expressao • TK_OC_OR prec_six
      Reduce derivation
        expressao
        ↳ 21: expressao                                                   TK_OC_OR prec_six
              ↳ 22: prec_six
                    ↳ 24: prec_five
                          ↳ 27: prec_four
                                ↳ 32: prec_three
                                      ↳ 35: prec_two
                                            ↳ 39: prec_one
                                                  ↳ 43: prec_zero
                                                        ↳ 45: expressao •



State 49

   39 prec_two: prec_one •
   41 prec_one: '-' prec_one •

    TK_OC_LE   reduce using rule 39 (prec_two)
    TK_OC_LE   [reduce using rule 41 (prec_one)]
    TK_OC_GE   reduce using rule 39 (prec_two)
    TK_OC_GE   [reduce using rule 41 (prec_one)]
    TK_OC_EQ   reduce using rule 39 (prec_two)
    TK_OC_EQ   [reduce using rule 41 (prec_one)]
    TK_OC_NE   reduce using rule 39 (prec_two)
    TK_OC_NE   [reduce using rule 41 (prec_one)]
    TK_OC_AND  reduce using rule 39 (prec_two)
    TK_OC_AND  [reduce using rule 41 (prec_one)]
    TK_OC_OR   reduce using rule 39 (prec_two)
    TK_OC_OR   [reduce using rule 41 (prec_one)]
    ';'        reduce using rule 39 (prec_two)
    ';'        [reduce using rule 41 (prec_one)]
    '<'        reduce using rule 39 (prec_two)
    '<'        [reduce using rule 41 (prec_one)]
    ','        reduce using rule 39 (prec_two)
    ','        [reduce using rule 41 (prec_one)]
    ']'        reduce using rule 39 (prec_two)
    ']'        [reduce using rule 41 (prec_one)]
    '^'        reduce using rule 39 (prec_two)
    '^'        [reduce using rule 41 (prec_one)]
    '>'        reduce using rule 39 (prec_two)
    '>'        [reduce using rule 41 (prec_one)]
    '+'        reduce using rule 39 (prec_two)
    '+'        [reduce using rule 41 (prec_one)]
    '-'        reduce using rule 39 (prec_two)
    '-'        [reduce using rule 41 (prec_one)]
    '*'        reduce using rule 39 (prec_two)
    '*'        [reduce using rule 41 (prec_one)]
    '/'        reduce using rule 39 (prec_two)
    '/'        [reduce using rule 41 (prec_one)]
    '%'        reduce using rule 39 (prec_two)
    '%'        [reduce using rule 41 (prec_one)]
    ')'        reduce using rule 39 (prec_two)
    ')'        [reduce using rule 41 (prec_one)]
    '}'        reduce using rule 39 (prec_two)
    '}'        [reduce using rule 41 (prec_one)]
    $default   reduce using rule 39 (prec_two)
